# dependency-dingo

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/Dingo/: Dingo.py  __init__.py
