[build-system]
requires = ["setuptools>=65.0","dll-diagnostics","termcolor"]
build-backend = "setuptools.build_meta"

[project]
name = "Dingo"
version = "0.0.2"
authors = [
  { name="Grason Brennan", email="grason.brennan@libertyreach.com" },
]
description = "A Python library for helping Liberty Reach engineers resolve deployment and dependency locating ussues."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]

[project.urls]
"Homepage" = "https://github.com/libertyreach/dependency-dingo"
"Bug Tracker" = "https://github.com/libertyreach/dependency-dingo"

[project.scripts]
dingo = 'Dingo.Dingo:main'